Curve Object Scaled to 0 + Freestyle = Crash #36727

Closed
opened 2013-09-14 17:01:59 +02:00 by David Brennan · 8 comments

%%%--- Operating System, Graphics card ---
Windows 7, 64-bit
Intel Integrated

- Blender version with error, and version that worked ---

Blender 2.68. This issue has persisted for some time with Freestyle.

- Short description of error ---

When a Curve Object is scaled to 0.000, and Freestyle is on, then Blender crashes immediately upon render. This can be very problematic for even simple animations - such as Text (which are Curves) growing.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Very simple: Have a Curve Object scaled to 0.000. Enable Freestyle. Render. It will crash.

Attached is a .Blend example of this.
%%%

%%%--- Operating System, Graphics card --- Windows 7, 64-bit Intel Integrated - Blender version with error, and version that worked --- Blender 2.68. This issue has persisted for some time with Freestyle. - Short description of error --- When a Curve Object is scaled to 0.000, and Freestyle is on, then Blender crashes immediately upon render. This can be very problematic for even simple animations - such as Text (which are Curves) growing. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Very simple: Have a Curve Object scaled to 0.000. Enable Freestyle. Render. It will crash. Attached is a .Blend example of this. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Working fine on my 560ti. Maybe it's an Intel Graphics problem. Which intel graphics is it BTW?%%%

%%%Working fine on my 560ti. Maybe it's an Intel Graphics problem. Which intel graphics is it BTW?%%%
Author

%%%My computer has an Intel i7-3770 at 3.4 gHz.

Again, this issue with Curves with a 0 Scale crashing Freestyle is consistent, no matter the file or arrangement.%%%

%%%My computer has an Intel i7-3770 at 3.4 gHz. Again, this issue with Curves with a 0 Scale crashing Freestyle is consistent, no matter the file or arrangement.%%%

%%%Discard my previous comment, the file needs the curve object to be turned on for render. Yup it crashes instantly.
Tons of degenerate triangle warnings.%%%

%%%Discard my previous comment, the file needs the curve object to be turned on for render. Yup it crashes instantly. Tons of degenerate triangle warnings.%%%
Author

%%%(Yeah, WK and anybody else who downloads that - I'm sorry that the Curve is set to not Render. That was my fault.)%%%

%%%(Yeah, WK and anybody else who downloads that - I'm sorry that the Curve is set to not Render. That was my fault.)%%%

%%%Was a division by zero…

Fixed in r60150, thanks for the report! :)%%%

%%%Was a division by zero… Fixed in r60150, thanks for the report! :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Ah, very good diagnosis and work, Bastien Montagne.

Thanks as always to everybody at Blender. God bless.%%%

%%%Ah, very good diagnosis and work, Bastien Montagne. Thanks as always to everybody at Blender. God bless.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36727
No description provided.