Fix [#36727] Curve Object Scaled to 0 + Freestyle = Crash

Division by zero...